@@ -28,8 +28,6 @@ std::unique_ptr<ResizableDialogHelper> TabsOptionsPage::InitializeResizeDialogHe
 		MovingType::None, SizingType::Horizontal);
 	controls.emplace_back(GetDlgItem(GetDialog(), IDC_TABS_DOUBLECLICKCLOSE), MovingType::None,
 		SizingType::Horizontal);
-	controls.emplace_back(GetDlgItem(GetDialog(), IDC_TABS_CLOSEMAINWINDOW), MovingType::None,
-		SizingType::Horizontal);
 	return std::make_unique<ResizableDialogHelper>(GetDialog(), controls);
 }
 
@@ -59,11 +57,6 @@ void TabsOptionsPage::InitializeControls()
 	{
 		CheckDlgButton(GetDialog(), IDC_TABS_DOUBLECLICKCLOSE, BST_CHECKED);
 	}
-
-	if (m_config->closeMainWindowOnTabClose)
-	{
-		CheckDlgButton(GetDialog(), IDC_TABS_CLOSEMAINWINDOW, BST_CHECKED);
-	}
 }
 
 void TabsOptionsPage::OnCommand(WPARAM wParam, LPARAM lParam)
@@ -77,7 +70,6 @@ void TabsOptionsPage::OnCommand(WPARAM wParam, LPARAM lParam)
 	case IDC_TABS_OPENNEXTTOCURRENT:
 	case IDC_SETTINGS_CHECK_ALWAYSNEWTAB:
 	case IDC_TABS_DOUBLECLICKCLOSE:
-	case IDC_TABS_CLOSEMAINWINDOW:
 		m_settingChangedCallback();
 		break;
 	}
@@ -99,7 +91,4 @@ void TabsOptionsPage::SaveSettings()
 
 	m_config->doubleClickTabClose =
 		(IsDlgButtonChecked(GetDialog(), IDC_TABS_DOUBLECLICKCLOSE) == BST_CHECKED);
-
-	m_config->closeMainWindowOnTabClose =
-		(IsDlgButtonChecked(GetDialog(), IDC_TABS_CLOSEMAINWINDOW) == BST_CHECKED);
 }
