@@ -404,7 +404,6 @@
 #define IDC_OPTION_REPLACEEXPLORER_NONE 1265
 #define IDC_OPTION_REPLACEEXPLORER_FILESYSTEM 1266
 #define IDC_OPTION_REPLACEEXPLORER_ALL  1267
-#define IDC_TABS_CLOSEMAINWINDOW        1268
 #define IDC_SITELINK                    1269
 #define IDC_OPTION_SYNCTREEVIEW         1272
 #define IDC_OPTION_CHECKBOXSELECTION    1273
