@@ -248,6 +248,8 @@ Misc:
 - The option to use fixed width tabs has been removed, as it
   doesn't appear to be properly supported by the tab control. See
   #255.
+- The "Close the main window when closing the last tab" option
+  has been removed.
 
 Version 1.4.0 (29/01/2024)
 --------------------------
